--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -2,10 +2,22 @@
     "name": "@self/temporal",
     "version": "0.0.1",
     "scripts": {
-        "dev": "tsc --build --watch temporal/tsconfig.json",
-        "build": "tsc --build temporal/tsconfig.json",
+        "build": "tsc --build ./tsconfig.json",
+        "build:watch": "tsc --build --watch ./tsconfig.json",
         "worker": "node --loader ts-node/esm temporal/src/worker.ts",
         "worker:watch": "nodemon --watch './temporal/lib/**/*.{ts,js}' --exec 'node --loader ts-node/esm' temporal/src/worker.ts"
     },
-    "type": "module"
+    "type": "module",
+    "devDependencies": {
+        "@prisma/client": "^3.12.0",
+        "@temporalio/worker": "^0.21.1",
+        "@temporalio/workflow": "^0.21.0",
+        "@tsconfig/node16": "^1.0.2",
+        "date-fns": "^2.27.0",
+        "prisma": "^3.12.0",
+        "typescript": "^4.6.3"
+    },
+    "dependencies": {
+        "temporalio": "^0.19.2"
+    }
 }
