--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -4,8 +4,8 @@
     "scripts": {
         "build": "tsc --build ./tsconfig.json",
         "build:watch": "tsc --build --watch ./tsconfig.json",
-        "worker": "node --loader ts-node/esm temporal/src/worker.ts",
-        "worker:watch": "nodemon --watch './temporal/lib/**/*.{ts,js}' --exec 'node --loader ts-node/esm' temporal/src/worker.ts"
+        "worker": "node --loader ts-node/esm ./src/worker.ts",
+        "worker:watch": "nodemon --watch './lib/**/*.{ts,js}' --exec 'node --loader ts-node/esm' ./src/worker.ts"
     },
     "type": "module",
     "devDependencies": {
@@ -13,8 +13,11 @@
         "@temporalio/worker": "^0.21.1",
         "@temporalio/workflow": "^0.21.0",
         "@tsconfig/node16": "^1.0.2",
+        "@types/node": "^17.0.23",
         "date-fns": "^2.27.0",
+        "nodemon": "^2.0.15",
         "prisma": "^3.12.0",
+        "ts-node": "^10.7.0",
         "typescript": "^4.6.3"
     },
     "dependencies": {
