init index.ts in @self/temporal

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -28,6 +28,7 @@
     "@playwright/test": "^1.21.1",
     "@prisma/client": "^3.12.0",
     "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
+    "@self/temporal": "workspace:^0.0.1",
     "@sentry/browser": "^6.19.6",
     "@sentry/node": "^6.19.6",
     "@sentry/tracing": "^6.19.6",
@@ -38,6 +39,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@temporalio/client": "^0.21.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/svelte": "^3.1.1",
     "@trpc/client": "^9.22.0",
@@ -82,7 +84,6 @@
     "svelte-preprocess": "^4.10.6",
     "svelte-select": "^4.4.7",
     "tailwindcss": "^3.0.23",
-    "temporalio": "^0.19.2",
     "tippy.js": "^6.3.7",
     "trpc-sveltekit": "^1.2.3",
     "tslib": "^2.3.1",
