--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -11,15 +11,21 @@
     "type": "module",
     "devDependencies": {
         "@prisma/client": "^3.12.0",
+        "@temporalio/client": "^0.21.0",
         "@temporalio/worker": "^0.21.1",
         "@temporalio/workflow": "^0.21.0",
         "@tsconfig/node16": "^1.0.2",
         "@types/node": "^17.0.23",
+        "axios": "^0.26.1",
         "date-fns": "^2.27.0",
         "nodemon": "^2.0.15",
         "prisma": "^3.12.0",
+        "sinon": "^13.0.2",
         "ts-node": "^10.7.0",
-        "typescript": "^4.6.3"
+        "twilio": "^3.76.1",
+        "typescript": "^4.6.3",
+        "uuid": "^8.3.2",
+        "vitest": "^0.9.2"
     },
     "dependencies": {
         "temporalio": "^0.19.2"
