--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -16,8 +16,10 @@
         "@temporalio/workflow": "^0.21.0",
         "@tsconfig/node16": "^1.0.2",
         "@types/node": "^17.0.23",
+        "@types/sinon": "^10.0.11",
         "axios": "^0.26.1",
         "date-fns": "^2.27.0",
+        "ms": "3.0.0-canary.1",
         "nodemon": "^2.0.15",
         "prisma": "^3.12.0",
         "sinon": "^13.0.2",
