--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -32,5 +32,8 @@
     },
     "dependencies": {
         "temporalio": "^0.21.1"
-    }
+    },
+    "main": "lib/index.js",
+    "module": "lib/index.js",
+    "typings": "lib/index.d.ts"
 }
