--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -35,6 +35,7 @@
     "@steeze-ui/heroicons": "^1.1.1",
     "@steeze-ui/svelte-icon": "^1.3.1",
     "@sveltejs/adapter-auto": "^1.0.0-next.37",
+    "@sveltejs/adapter-vercel": "^1.0.0-next.49",
     "@sveltejs/kit": "^1.0.0-next.320",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.0",
