--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -2,7 +2,7 @@
     "name": "@self/temporal",
     "version": "0.0.1",
     "scripts": {
-        "build": "tsc --build ./tsconfig.json",
+        "build": "prisma generate --schema=../site/prisma/schema.prisma && tsc --build ./tsconfig.json",
         "build:watch": "tsc --build --watch ./tsconfig.json",
         "build:cloud": "prisma generate --schema=../site/prisma/schema.prisma && pnpm run build",
         "start": "node --loader ts-node/esm ./src/worker.ts",
