extract generators from seed script

--- a/packages/seed/tsconfig.json
+++ b/packages/seed/tsconfig.json
@@ -12,5 +12,5 @@
 		"noUncheckedIndexedAccess": true,
 		"exactOptionalPropertyTypes": true
 	},
-	"include": ["./seed.ts"]
+	"include": ["./seed.ts", "./generators.ts"]
 }
