--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,8 +41,8 @@
 	"editor.formatOnType": true,
 	"js/ts.implicitProjectConfig.strictNullChecks": true,
 	"path-intellisense.ignoreTsConfigBaseUrl": true,
-	"typescript.inlayHints.parameterTypes.enabled": true,
-	"typescript.inlayHints.propertyDeclarationTypes.enabled": true,
-	"typescript.inlayHints.variableTypes.enabled": true,
+	// "typescript.inlayHints.parameterTypes.enabled": true,
+	// "typescript.inlayHints.propertyDeclarationTypes.enabled": true,
+	// "typescript.inlayHints.variableTypes.enabled": true,
 	"typescript.preferences.importModuleSpecifier": "non-relative"
 }
