--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "v-postbuild": "cp node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
     "v-postbuild-new": "cp ../../node_modules/.pnpm/@prisma+engines@3.13.0-17.efdf9b1183dddfd4258cd181a72125755215ab7b/node_modules/@prisma/engines/*query* .vercel_build_output/functions/node/render/;cp prisma/schema.prisma .vercel_build_output/functions/node/render/",
+    "postinstall": "prisma generate",
     "test": "playwright test"
   },
   "devDependencies": {
