--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -2,12 +2,13 @@
     "name": "@self/temporal",
     "version": "0.0.1",
     "scripts": {
-        "build": "prisma generate --schema=../site/prisma/schema.prisma && tsc --build ./tsconfig.json",
+        "build": "tsc --build ./tsconfig.json",
         "build:watch": "tsc --build --watch ./tsconfig.json",
-        "build:cloud": "prisma generate --schema=../site/prisma/schema.prisma && pnpm run build",
+        "prisma:cp": "cp -r ../site/prisma ./prisma",
+        "prisma:gen": "prisma generate",
+        "postinstall": "pnpm run prisma:gen && pnpm run prisma:cp",
         "start": "node --loader ts-node/esm ./src/worker.ts",
         "start:watch": "nodemon --watch './lib/**/*.{ts,js}' --exec 'node --loader ts-node/esm' ./src/worker.ts",
-        "postinstall": "prisma generate --schema=../site/prisma/schema.prisma",
         "test": "vitest run"
     },
     "type": "module",
