--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,9 +2,9 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [main, master]
+    branches: [dev, main]
   pull_request:
-    branches: [main, master]
+    branches: [dev, main]
 
 env:
   DOMAIN: "https://dev.letand.be"
