--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -29,9 +29,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 7.0.0-rc.9
+        uses: actions/setup-node@v2
         with:
           node-version: "14.x"
+          # cache: 'pnpm'
       - name: Install dependencies
         run: pnpm install --filter=@self/site-test... --frozen-lockfile
       - name: Install Playwright
