--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,7 +32,7 @@ jobs:
       - uses: pnpm/action-setup@v2.0.1
         with:
           version: 7.0.0-rc.9
-        uses: actions/setup-node@v2
+      - uses: actions/setup-node@v2
         with:
           node-version: "14.x"
           # cache: 'pnpm'
