build deps for playwright test

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -40,8 +40,8 @@ jobs:
         run: pnpm install --filter=@self/site-test... --frozen-lockfile
       - name: Install Playwright
         run: npx playwright install --with-deps
-      # - name: Build deps
-      #   run: pnpm run --filter=@self/site-test... build
+      - name: Build deps
+        run: pnpm run --filter=@self/site-test... build
       - name: Run Playwright tests
         run: pnpm test --filter=@self/site-test
       - uses: actions/upload-artifact@v2
