--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,7 +2,7 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [dev, main]
+    branches: [testTrigger]
   pull_request:
     branches: [dev, main]
 
