--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -5,8 +5,8 @@
         "build": "tsc --build ./tsconfig.json",
         "build:watch": "tsc --build --watch ./tsconfig.json",
         "prisma:cp": "cp -r ../site/prisma ./prisma",
-        "prisma:gen": "prisma generate",
-        "postinstall": "pnpm run prisma:gen && pnpm run prisma:cp",
+        "prisma:gen": "pnpm run prisma:cp && prisma generate",
+        "postinstall": "pnpm run prisma:gen",
         "start": "node --loader ts-node/esm ./src/worker.ts",
         "start:watch": "nodemon --watch './lib/**/*.{ts,js}' --exec 'node --loader ts-node/esm' ./src/worker.ts",
         "test": "vitest run"
