--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -11,7 +11,7 @@
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitReturns": true,
 		"noUncheckedIndexedAccess": true,
-		"exactOptionalPropertyTypes": true,
+		// "exactOptionalPropertyTypes": true,
 		"esModuleInterop": true,
 		"sourceMap": true,
 		"paths": {
