--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -12,7 +12,7 @@
     "preview": "svelte-kit preview",
     "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore ./.svelte-kit --watch",
-    "check:nodemon": "nodemon --exec 'pnpm run check' -e 'ts svelte' --watch 'src'",
+    "check:nodemon": "nodemon --exec 'pnpm run check' -e 'ts svelte' --watch 'src' --delay 2",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "custom-lint": "eslint . --ext .ts,.svelte",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
