--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -10,8 +10,8 @@
     "build:vercel": "pnpm exec prisma generate && pnpm build --filter=@self/site... && pnpm run postbuild:vercel",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
-    "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore ./.svelte-kit --watch",
+    "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests",
+    "check:watch": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests --watch",
     "check:nodemon": "nodemon --exec 'pnpm run check' -e 'ts svelte' --watch 'src' --delay 2",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "custom-lint": "eslint . --ext .ts,.svelte",
