update github action

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,14 +2,15 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [testTrigger]
+    branches: [dev, stage]
   pull_request:
     branches: [dev, main]
 
 env:
   DOMAIN: "https://dev.letand.be"
   CALLBACK_DOMAIN: "https://dev.letand.be"
-  DATABASE_URL: "mysql://aki0pn3ea7cw:pscale_pw_gehwA1CETeGqhpnYoV3uR0u1Xk4UdMUMv4Ck8dU5uUA@z3p18h1dgra9.eu-central-1.psdb.cloud/aqaratechdb?sslaccept=strict"
+  DATABASE_URL: "mysql://u4x3ta31vxc4:pscale_pw_y0XAHqm9CjiB3GaJaUYZ92-Ids3-bpkdRtYt_f2FVUA@9x0wz4ri6ydp.eu-central-1.psdb.cloud/aqaratechdb?sslaccept=strict&pool_timeout=0"
+  REUSE_PRISMA: "TRUE"
   AUTH0_DOMAIN: "https://auth.letand.be"
   AUTH0_CLIENT_ID: "z6oqyOuPLao6XhJeCje9tZ8ZbiJa5zct"
   AUTH0_CLIENT_SECRET: "uSR4Gjf3XNN-1kfZGuppDqRdbz7XD6A4o2g8yY1GdZgqCXeYhWhdqfPUoIIJLBRf"
@@ -28,16 +29,16 @@ jobs:
     timeout-minutes: 25
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: pnpm/action-setup@v2.0.1
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2.2.1
         with:
-          version: 7.0.0-rc.9
-      - uses: actions/setup-node@v2
+          version: 7.0.0
+      - uses: actions/setup-node@v3
         with:
-          node-version: "14.x"
-          # cache: 'pnpm'
+          node-version: "16.x"
+          cache: "pnpm"
       - name: Install dependencies
-        run: pnpm install --filter=@self/site-test... --frozen-lockfile
+        run: pnpm install --frozen-lockfile
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Build deps
