--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
-    "build:vercel": "pnpm exec prisma generate && pnpm build --filter=@self/site... && pnpm run postbuild:vercel",
+    "build:vercel": "pnpm exec prisma generate && pnpm --filter=@self/site... build && pnpm run postbuild:vercel",
     "package": "svelte-kit package",
     "preview": "svelte-kit preview",
     "check": "svelte-check --use-new-transformation --tsconfig ./tsconfig.json --ignore tests",
