--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -12,6 +12,7 @@
         "@tsconfig/node16": "^1.0.2",
         "@types/node": "^17.0.31",
         "date-fns": "^2.27.0",
+        "dotenv": "^16.0.0",
         "ms": "3.0.0-canary.1",
         "prisma": "^3.13.0",
         "ts-node": "^10.7.0",
