--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -1,7 +1,21 @@
 {
     "name": "@self/seed",
+    "type": "module",
     "version": "0.0.1",
+    "source": "src/index.ts",
+    "exports": {
+        "require": "./dist/index.cjs",
+        "default": "./dist/index.modern.js"
+    },
+    "main": "./dist/index.cjs",
+    "module": "./dist/index.module.js",
+    "unpkg": "./dist/index.umd.js",
+    "types": "dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
     "scripts": {
+        "build": "microbundle",
         "seed": "ts-node-esm -T ./seed.ts",
         "prisma:gen": "prisma generate --schema=../site/prisma/schema.prisma"
     },
@@ -13,10 +27,10 @@
         "@types/node": "^17.0.31",
         "date-fns": "^2.27.0",
         "dotenv": "^16.0.0",
+        "microbundle": "^0.15.0",
         "ms": "3.0.0-canary.1",
         "prisma": "^3.13.0",
         "ts-node": "^10.7.0",
         "typescript": "^4.6.3"
-    },
-    "type": "module"
+    }
 }
