--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -23,7 +23,7 @@
 			"$utils/*": ["src/lib/utils/*"],
 			"$routers": ["src/lib/server/trpc/routers/index.ts"],
 			"$routers/*": ["src/lib/server/trpc/routers/*"],
-			"$environ": ["src/environment/index.ts"],
+			"$environment": ["src/lib/environment/index.ts"],
 			"$user": ["src/user/index.ts"],
 			"@self/site": ["src/lib/index.ts"],
 			"@self/site/*": ["src/lib/*"]
