new test db_url

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-DATABASE_URL=mysql://u4x3ta31vxc4:pscale_pw_y0XAHqm9CjiB3GaJaUYZ92-Ids3-bpkdRtYt_f2FVUA@9x0wz4ri6ydp.eu-central-1.psdb.cloud/aqaratechdb?sslaccept=strict&pool_timeout=0
+DATABASE_URL='mysql://gaydumfpx6qu:pscale_pw_Up8pyMWPf7gEXO-ml52wMlr834ylNUppevPmUtS3HgY@pv7vfr8yb7bd.ap-south-2.psdb.cloud/aqaratechdb?sslaccept=strict'
