update test db_url

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://gaydumfpx6qu:pscale_pw_Up8pyMWPf7gEXO-ml52wMlr834ylNUppevPmUtS3HgY@pv7vfr8yb7bd.ap-south-2.psdb.cloud/aqaratechdb?sslaccept=strict'
+DATABASE_URL='mysql://p68lrlva51jx:pscale_pw_ShiW8uf2pDZVUTB3kil0EwTpCvawu869t0bIlXKGk5E@t1cp4lkeutv3.eu-central-2.psdb.cloud/aqaratechdb?sslaccept=strict&pool_timeout=0'
