--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -7,7 +7,7 @@ on:
     branches: [stage]
 
 env:
-  DATABASE_URL: "mysql://u4x3ta31vxc4:pscale_pw_y0XAHqm9CjiB3GaJaUYZ92-Ids3-bpkdRtYt_f2FVUA@9x0wz4ri6ydp.eu-central-1.psdb.cloud/aqaratechdb?sslaccept=strict&pool_timeout=0"
+  DATABASE_URL: "mysql://p68lrlva51jx:pscale_pw_ShiW8uf2pDZVUTB3kil0EwTpCvawu869t0bIlXKGk5E@t1cp4lkeutv3.eu-central-2.psdb.cloud/aqaratechdb?sslaccept=strict&pool_timeout=0"
   REUSE_PRISMA: 1
 
   DOMAIN: "https://dev.letand.be"
