--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -66,6 +66,7 @@
     "jose": "^4.8.1",
     "jsdom": "^19.0.0",
     "jsonwebtoken": "^8.5.1",
+    "just-compare": "^2.1.0",
     "lodash-es": "^4.17.21",
     "logrocket": "^3.0.0",
     "nanoid": "^3.3.3",
