--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -20,17 +20,17 @@
         "prisma:gen": "prisma generate --schema=../site/prisma/schema.prisma"
     },
     "devDependencies": {
-        "@faker-js/faker": "^6.3.0",
-        "@prisma/client": "^3.13.0",
-        "@tsconfig/esm": "^1.0.0",
-        "@tsconfig/node16": "^1.0.2",
-        "@types/node": "^17.0.31",
-        "date-fns": "^2.27.0",
-        "dotenv": "^16.0.0",
-        "microbundle": "^0.15.0",
+        "@faker-js/faker": "6.3.0",
+        "@prisma/client": "3.13.0",
+        "@tsconfig/esm": "1.0.0",
+        "@tsconfig/node16": "1.0.2",
+        "@types/node": "17.0.31",
+        "date-fns": "2.27.0",
+        "dotenv": "16.0.0",
+        "microbundle": "0.15.0",
         "ms": "3.0.0-canary.1",
-        "prisma": "^3.13.0",
-        "ts-node": "^10.7.0",
-        "typescript": "^4.6.3"
+        "prisma": "3.13.0",
+        "ts-node": "10.7.0",
+        "typescript": "4.6.3"
     }
 }
