--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -19,79 +19,79 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@felte/reporter-svelte": "^1.1.1",
-    "@felte/reporter-tippy": "^1.1.1",
-    "@felte/validator-zod": "^1.0.9",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@prisma/client": "^3.13.0",
-    "@rgossiaux/svelte-headlessui": "^1.0.0",
-    "@self/temporal": "workspace:^0.0.1",
-    "@sentry/browser": "^6.19.6",
-    "@sentry/node": "^6.19.6",
-    "@sentry/tracing": "^6.19.6",
-    "@steeze-ui/heroicons": "^1.1.1",
-    "@steeze-ui/svelte-icon": "^1.3.1",
-    "@sveltejs/adapter-auto": "^1.0.0-next.39",
-    "@sveltejs/adapter-vercel": "^1.0.0-next.50",
+    "@felte/reporter-svelte": "1.1.1",
+    "@felte/reporter-tippy": "1.1.1",
+    "@felte/validator-zod": "1.0.9",
+    "@fortawesome/free-brands-svg-icons": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@prisma/client": "3.13.0",
+    "@rgossiaux/svelte-headlessui": "1.0.0",
+    "@self/temporal": "workspace:0.0.1",
+    "@sentry/browser": "6.19.6",
+    "@sentry/node": "6.19.6",
+    "@sentry/tracing": "6.19.6",
+    "@steeze-ui/heroicons": "1.1.1",
+    "@steeze-ui/svelte-icon": "1.3.1",
+    "@sveltejs/adapter-auto": "1.0.0-next.39",
+    "@sveltejs/adapter-vercel": "1.0.0-next.50",
     "@sveltejs/kit": "1.0.0-next.326",
-    "@tailwindcss/aspect-ratio": "^0.4.0",
-    "@tailwindcss/forms": "^0.5.0",
-    "@tailwindcss/typography": "^0.5.2",
-    "@temporalio/client": "^0.21.0",
-    "@temporalio/workflow": "^0.21.0",
-    "@testing-library/svelte": "^3.1.1",
-    "@trpc/client": "^9.22.0",
-    "@trpc/server": "^9.22.0",
-    "@types/cookie": "^0.5.1",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/uuid": "^8.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "@vitest/ui": "^0.10.0",
-    "algoliasearch": "^4.13.0",
-    "autoprefixer": "^10.4.7",
-    "c8": "^7.11.2",
-    "chart.js": "^3.7.1",
-    "chartjs-adapter-date-fns": "^2.0.0",
-    "cookie": "^0.5.0",
-    "date-fns": "^2.27.0",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.15.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "felte": "^1.2.0",
-    "fuse.js": "^6.5.3",
-    "jose": "^4.8.1",
-    "jsdom": "^19.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "just-compare": "^2.1.0",
-    "logrocket": "^3.0.0",
-    "nanoid": "^3.3.3",
-    "nodemon": "^2.0.16",
-    "postcss": "^8.4.13",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.10",
-    "prisma": "^3.13.0",
-    "remeda": "^0.0.32",
-    "superjson": "^1.9.1",
-    "svelecte": "^3.7.3",
-    "svelte": "^3.48.0",
-    "svelte-check": "^2.7.0",
-    "svelte-fa": "^2.4.0",
-    "svelte-preprocess": "^4.10.6",
-    "svelte-select": "^4.4.7",
-    "svelte2tsx": "^0.5.9",
-    "tailwindcss": "^3.0.23",
-    "tippy.js": "^6.3.7",
-    "trpc-sveltekit": "^1.2.3",
-    "tslib": "^2.4.0",
-    "twilio": "^3.76.1",
-    "typescript": "^4.6.3",
-    "uuid": "^8.3.2",
-    "vitest": "^0.10.0",
-    "vitest-svelte-kit": "^0.0.6",
-    "zod": "^3.15.1"
+    "@tailwindcss/aspect-ratio": "0.4.0",
+    "@tailwindcss/forms": "0.5.0",
+    "@tailwindcss/typography": "0.5.2",
+    "@temporalio/client": "0.21.0",
+    "@temporalio/workflow": "0.21.0",
+    "@testing-library/svelte": "3.1.1",
+    "@trpc/client": "9.22.0",
+    "@trpc/server": "9.22.0",
+    "@types/cookie": "0.5.1",
+    "@types/jsonwebtoken": "8.5.8",
+    "@types/uuid": "8.3.3",
+    "@typescript-eslint/eslint-plugin": "5.21.0",
+    "@typescript-eslint/parser": "5.21.0",
+    "@vitest/ui": "0.10.0",
+    "algoliasearch": "4.13.0",
+    "autoprefixer": "10.4.7",
+    "c8": "7.11.2",
+    "chart.js": "3.7.1",
+    "chartjs-adapter-date-fns": "2.0.0",
+    "cookie": "0.5.0",
+    "date-fns": "2.27.0",
+    "dotenv": "16.0.0",
+    "eslint": "8.15.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-svelte3": "4.0.0",
+    "felte": "1.2.0",
+    "fuse.js": "6.5.3",
+    "jose": "4.8.1",
+    "jsdom": "19.0.0",
+    "jsonwebtoken": "8.5.1",
+    "just-compare": "2.1.0",
+    "logrocket": "3.0.0",
+    "nanoid": "3.3.3",
+    "nodemon": "2.0.16",
+    "postcss": "8.4.13",
+    "prettier": "2.6.2",
+    "prettier-plugin-tailwindcss": "0.1.10",
+    "prisma": "3.13.0",
+    "remeda": "0.0.32",
+    "superjson": "1.9.1",
+    "svelecte": "3.7.3",
+    "svelte": "3.48.0",
+    "svelte-check": "2.7.0",
+    "svelte-fa": "2.4.0",
+    "svelte-preprocess": "4.10.6",
+    "svelte-select": "4.4.7",
+    "svelte2tsx": "0.5.9",
+    "tailwindcss": "3.0.23",
+    "tippy.js": "6.3.7",
+    "trpc-sveltekit": "1.2.3",
+    "tslib": "2.4.0",
+    "twilio": "3.76.1",
+    "typescript": "4.6.3",
+    "uuid": "8.3.2",
+    "vitest": "0.10.0",
+    "vitest-svelte-kit": "0.0.6",
+    "zod": "3.15.1"
   },
   "type": "module"
 }
