--- a/packages/temporal/package.json
+++ b/packages/temporal/package.json
@@ -12,27 +12,27 @@
     },
     "type": "module",
     "devDependencies": {
-        "@prisma/client": "^3.13.0",
-        "@temporalio/client": "^0.21.0",
-        "@temporalio/worker": "^0.21.1",
-        "@temporalio/workflow": "^0.21.0",
-        "@tsconfig/node16": "^1.0.2",
-        "@types/node": "^17.0.31",
-        "@types/sinon": "^10.0.11",
-        "axios": "^0.27.2",
-        "date-fns": "^2.27.0",
+        "@prisma/client": "3.13.0",
+        "@temporalio/client": "0.21.0",
+        "@temporalio/worker": "0.21.1",
+        "@temporalio/workflow": "0.21.0",
+        "@tsconfig/node16": "1.0.2",
+        "@types/node": "17.0.31",
+        "@types/sinon": "10.0.11",
+        "axios": "0.27.2",
+        "date-fns": "2.27.0",
         "ms": "3.0.0-canary.1",
-        "nodemon": "^2.0.16",
-        "prisma": "^3.13.0",
-        "sinon": "^13.0.2",
-        "ts-node": "^10.7.0",
-        "twilio": "^3.76.1",
-        "typescript": "^4.6.3",
-        "uuid": "^8.3.2",
-        "vitest": "^0.10.0"
+        "nodemon": "2.0.16",
+        "prisma": "3.13.0",
+        "sinon": "13.0.2",
+        "ts-node": "10.7.0",
+        "twilio": "3.76.1",
+        "typescript": "4.6.3",
+        "uuid": "8.3.2",
+        "vitest": "0.10.0"
     },
     "dependencies": {
-        "temporalio": "^0.21.1"
+        "temporalio": "0.21.1"
     },
     "main": "lib/index.js",
     "module": "lib/index.js",
