--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -15,7 +15,8 @@
         "dist"
     ],
     "scripts": {
-        "build": "tsc --project tsconfig.build.json && microbundle --tsconfig tsconfig.build.json",
+        "build": "tsc --project tsconfig.build.json",
+        "build:microbundle": "tsc --project tsconfig.build.json && microbundle --tsconfig tsconfig.build.json",
         "seed": "node dist/seed.js",
         "prisma:gen": "prisma generate --schema=../site/prisma/schema.prisma"
     },
