--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,9 +2,9 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [stage]
+    branches: [dev, stage, prod]
   pull_request:
-    branches: [stage]
+    branches: [stage, prod]
 
 env:
   DATABASE_URL: "mysql://9pig6sun8cyh:pscale_pw_ASXrHfYwfwc9vSHd860uTJ-2MO90WkbGmgLEIfOHd2A@86asp07tzffr.ap-south-2.psdb.cloud/aqaratechdb?sslaccept=strict&pool_timeout=0"
@@ -42,9 +42,9 @@ jobs:
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Build deps
-        run: pnpm run --filter=@self/site-test... build
+        run: pnpm run --filter "@self/site-test^..." build
       - name: Run Playwright tests
-        run: pnpm test --filter=@self/site-test
+        run: pnpm test --filter "@self/site-test"
       - uses: actions/upload-artifact@v2
         if: always()
         with:
