add twilio messaging service sid env var

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,4 @@
 DATABASE_URL='mysql://9pig6sun8cyh:pscale_pw_ASXrHfYwfwc9vSHd860uTJ-2MO90WkbGmgLEIfOHd2A@86asp07tzffr.ap-south-2.psdb.cloud/aqaratechdb?sslaccept=strict&pool_timeout=0'
+TWILIO_ACCOUNT_SID=ACbffc494534d2b9823213e4538d71c98d
+TWILIO_AUTH_TOKEN=a94743f7f5baf621a2f2535f05c03970
+# TWILIO_FROM_NUMBER=+15005550006
