--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -34,7 +34,7 @@
     "@steeze-ui/svelte-icon": "1.3.1",
     "@sveltejs/adapter-auto": "1.0.0-next.41",
     "@sveltejs/adapter-vercel": "1.0.0-next.50",
-    "@sveltejs/kit": "1.0.0-next.330",
+    "@sveltejs/kit": "1.0.0-next.328",
     "@tailwindcss/aspect-ratio": "0.4.0",
     "@tailwindcss/forms": "0.5.1",
     "@tailwindcss/typography": "0.5.2",
@@ -45,6 +45,7 @@
     "@trpc/server": "9.23.2",
     "@types/cookie": "0.5.1",
     "@types/jsonwebtoken": "8.5.8",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.23.0",
     "@typescript-eslint/parser": "5.23.0",
@@ -68,6 +69,7 @@
     "just-compare": "2.1.0",
     "logrocket": "3.0.0",
     "nanoid": "3.3.4",
+    "nodemailer": "^6.7.5",
     "nodemon": "2.0.16",
     "postcss": "8.4.13",
     "prettier": "2.6.2",
