--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -12,7 +12,7 @@
 		"noUncheckedIndexedAccess": true,
 		// "exactOptionalPropertyTypes": true,
 		"esModuleInterop": true,
-		// "sourceMap": true,
+		"sourceMap": true,
 		"paths": {
 			"$lib": ["src/lib"],
 			"$lib/*": ["src/lib/*"],
