--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -32,19 +32,20 @@ jobs:
       - uses: actions/checkout@v3
       - uses: pnpm/action-setup@v2.2.1
         with:
-          version: 7.0.0
+          version: 7.1.0
       - uses: actions/setup-node@v3
         with:
           node-version: "16.x"
           cache: "pnpm"
       - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+        run: pnpm install -r
+        # run: pnpm install --frozen-lockfile
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Build deps
-        run: pnpm run --filter "@self/site" package && pnpm run --filter "@self/seed" build
+        run: pnpm --filter "@self/site" run package && pnpm --filter "@self/seed" build && pnpm --filter "@self/site-test" test
       - name: Run Playwright tests
-        run: pnpm test --filter "@self/site-test"
+        run: pnpm --filter "@self/site-test" test
       - uses: actions/upload-artifact@v2
         if: always()
         with:
