--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,7 +2,7 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [stage, prod]
+    branches: [dev, stage, prod]
   pull_request:
     branches: [stage, prod]
 
