--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -24,11 +24,11 @@ jobs:
           node-version: "16.x"
           # cache: "pnpm" // TODO: add back
       - name: Install all
-        run: pnpm install -r
+        run: pnpm install -r --no-frozen-lockfile
       - name: Install & build dependencies
         run: pnpm --filter "@self/site" run package && pnpm --filter "@self/seed" run dev
       - name: Install @self/test dependencies
-        run: pnpm --filter "@self/site-test" install
+        run: pnpm --filter "@self/site-test" install --no-frozen-lockfile
       - name: Install Playwright
         run: npx playwright install --with-deps
       - name: Run Playwright tests
