--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -16,7 +16,10 @@
     "postbuild:vercel": "find ../../node_modules/.pnpm/ -name \"*libquery_engine*\" -type f -exec cp {} .vercel_build_output/functions/node/render \\;;cp prisma/schema.prisma .vercel_build_output/functions/node/render/;ls .vercel_build_output/functions/node/render/",
     "postinstall": "prisma generate",
     "prisma:gen": "prisma generate",
-    "test": "vitest run"
+    "test:vitest": "vitest run",
+    "test:setup": "node tests/db-setup.cjs",
+    "test": "pnpm run test:setup && PLAYWRIGHT_EXPERIMENTAL_FEATURES=1 playwright test",
+    "test:dev": "pnpm run test:setup && cross-env PLAYWRIGHT_EXPERIMENTAL_FEATURES=1 DEV=1 playwright test"
   },
   "devDependencies": {
     "@felte/reporter-svelte": "1.1.2",
@@ -24,8 +27,10 @@
     "@felte/validator-zod": "1.0.10",
     "@fortawesome/free-brands-svg-icons": "6.1.1",
     "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@playwright/test": "1.22.2",
     "@prisma/client": "3.14.0",
     "@rgossiaux/svelte-headlessui": "1.0.1",
+    "@self/seed": "workspace:^0.0.1",
     "@sentry/browser": "6.19.7",
     "@sentry/node": "6.19.7",
     "@sentry/tracing": "6.19.7",
@@ -50,6 +55,7 @@
     "chart.js": "3.7.1",
     "chartjs-adapter-date-fns": "2.0.0",
     "cookie": "0.5.0",
+    "cross-env": "7.0.3",
     "date-fns": "2.28.0",
     "dotenv": "16.0.1",
     "eslint": "8.15.0",
