new test db_url

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
-DATABASE_URL='mysql://862k5346c5q6:pscale_pw_aETUs5s9KQhjsjkoxuamsqyn-c2VmpqVGPSBvVJxTS0@kz17sp33s8ut.ap-south-2.psdb.cloud/aqaratechdb?sslaccept=strict&pool_timeout=0'
+DATABASE_URL='mysql://lp5w7h865rnm:pscale_pw_HuGMgxfTQ4X1-bW1BXm0xkYNnIBhjX5o4BjPP8G8cqE@kz17sp33s8ut.ap-south-2.psdb.cloud/aqaratechdb?sslaccept=strict'
 TWILIO_AUTH_TOKEN=a94743f7f5baf621a2f2535f05c03970
