--- a/packages/site/tsconfig.json
+++ b/packages/site/tsconfig.json
@@ -24,9 +24,11 @@
 			"$routers": ["src/lib/server/trpc/routers/index.ts"],
 			"$routers/*": ["src/lib/server/trpc/routers/*"],
 			"$environment": ["src/lib/environment/index.ts"],
+			"$environment/*": ["src/lib/environment/*"],
 			"$user": ["src/user/index.ts"],
-			"@self/site": ["src/lib/index.ts"],
-			"@self/site/*": ["src/lib/*"]
+			"$user/*": ["src/user/*"]
+			// "@self/site": ["src/lib/index.ts"],
+			// "@self/site/*": ["src/lib/*"]
 		}
 	}
 }
