--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -16,8 +16,7 @@
     ],
     "scripts": {
         "dev": "tsc --project tsconfig.build.json",
-        "build": "tsc --project tsconfig.build.json && microbundle --tsconfig tsconfig.build.json",
-        "package": "tsc --project tsconfig.build.json && microbundle --tsconfig tsconfig.build.json",
+        "package": "tsc --project tsconfig.build.json",
         "seed": "node dist/seed.js",
         "prisma:gen": "prisma generate --schema=../site/prisma/schema.prisma"
     },
