rename dev scripts

--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -15,8 +15,8 @@
         "dist"
     ],
     "scripts": {
-        "dev": "tsc --project tsconfig.build.json",
-        "package": "tsc --project tsconfig.build.json",
+        "build": "tsc --project tsconfig.build.json",
+        "package": "microbundle --tsconfig tsconfig.build.json",
         "seed": "node dist/seed.js",
         "prisma:gen": "prisma generate --schema=../site/prisma/schema.prisma"
     },
