--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -15,8 +15,8 @@
         "dist"
     ],
     "scripts": {
-        "dev": "tsc --project tsconfig.build.json && NODE_ENV=development node --experimental-fetch dist/notify-all.js",
         "build": "tsc --project tsconfig.build.json",
+        "start:dev": "tsc --project tsconfig.build.json && NODE_ENV=development node --experimental-fetch dist/notify-all.js",
         "start": "node --experimental-fetch dist/notify-all.js"
     },
     "devDependencies": {
