--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,9 +2,9 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [dev, stage, prod]
+    branches: [turbosinglesite, dev, stage, prod]
   pull_request:
-    branches: [stage, prod]
+    branches: [dev, stage, prod]
 
 env:
   REUSE_PRISMA: 1
