--- a/packages/seed/package.json
+++ b/packages/seed/package.json
@@ -3,20 +3,14 @@
     "type": "module",
     "version": "0.0.1",
     "source": "src/index.ts",
-    "exports": {
-        "require": "./dist/index.cjs",
-        "default": "./dist/index.modern.js"
-    },
-    "main": "./dist/index.cjs",
-    "module": "./dist/index.module.js",
-    "unpkg": "./dist/index.umd.js",
+    "main": "./dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
         "dist"
     ],
     "scripts": {
         "build": "tsc --project tsconfig.build.json",
-        "package": "microbundle --tsconfig tsconfig.build.json",
+        "package": "tsc --project tsconfig.build.json",
         "seed": "node dist/seed.js",
         "prisma:gen": "prisma generate --schema=../site/prisma/schema.prisma"
     },
