specify turbo test output

--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,10 @@
             "dependsOn": [
                 "package",
                 "build"
+            ],
+            "outputs": [
+                "playwright-report",
+                "test-results"
             ]
         },
         "lint": {
