--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: [turbosinglesite, dev, stage, prod]
+    branches: [dev, stage, prod]
   pull_request:
     branches: [dev, stage, prod]
 
@@ -22,7 +22,6 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        # os: [ubuntu-latest, macos-latest]
 
     steps:
       - name: Check out code
